--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,12 @@
 {
     "presets": [
-        ["env", { "modules": false }],
-        "stage-2"
-    ],
-    "plugins": ["transform-runtime"],
-    "comments": false,
-    "env": {
-        "test": {
-            "presets": ["env", "stage-2"],
-            "plugins": ["istanbul"]
+      ["env", {
+        "targets": {
+          "browsers": ["> 1%", "last 2 versions", "not ie <= 8"]
         }
-    }
-}
+      }],
+      "stage-2"
+    ],
+    "plugins": ["transform-vue-jsx", "transform-runtime"]
+  }
+  
