--- a/package.json
+++ b/package.json
@@ -1,77 +1,87 @@
 {
-  "name": "ocean",
+  "name": "vue-webpack4",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.js --port 80  --host 0.0.0.0 --public",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "node build/build.js"
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "build": "cross-env NODE_ENV=production node build/build.js",
+    "dll": "cross-env NODE_ENV=production webpack --progress --config build/webpack.dll.conf.js",
+    "lint": "eslint --ext .js,.vue src --cache",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
-  "engines": {
-    "node": ">= 4.0.0",
-    "npm": ">= 3.0.0"
+  "dependencies": {
+    "axios": "^0.18.0",
+    "html-loader": "^0.5.5",
+    "image-webpack-loader": "^4.3.1",
+    "vue": "^2.5.16",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
-  "sideEffects": [
-    "**/**.png",
-    "**/**.jpg",
-    "**/**.jpeg",
-    "**/**.scss",
-    "**/**.css"
-  ],
   "devDependencies": {
-    "babel-cli": "^6.26.0",
+    "add-asset-html-webpack-plugin": "^2.1.3",
+    "autoprefixer": "^8.6.0",
     "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.3",
+    "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^7.1.4",
-    "babel-plugin-istanbul": "^4.1.6",
+    "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.26.0",
+    "babel-plugin-transform-vue-jsx": "^3.7.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.24.1",
-    "babel-register": "^6.26.0",
+    "cache-loader": "^1.2.2",
     "chalk": "^2.4.1",
     "copy-webpack-plugin": "^4.5.1",
+    "cross-env": "^5.2.0",
     "css-loader": "^0.28.11",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "eslint": "^4.19.1",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-friendly-formatter": "^4.0.1",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-standard": "^3.1.0",
+    "eslint-plugin-vue": "^4.5.0",
     "file-loader": "^1.1.11",
     "friendly-errors-webpack-plugin": "^1.7.0",
-    "html-loader": "^0.5.5",
+    "happypack": "^5.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "image-webpack-loader": "^4.3.1",
-    "loglevel": "^1.6.1",
     "mini-css-extract-plugin": "^0.4.0",
+    "node-notifier": "^5.2.1",
     "node-sass": "^4.9.0",
-    "object-transfer": "^1.0.2",
     "optimize-css-assets-webpack-plugin": "^4.0.2",
     "ora": "^2.1.0",
-    "overlay": "^1.2.5",
-    "path": "^0.12.7",
     "portfinder": "^1.0.13",
+    "postcss-import": "^11.1.0",
+    "postcss-load-config": "^1.2.0",
     "postcss-loader": "^2.1.5",
+    "postcss-plugin": "^1.0.0",
+    "postcss-url": "^7.3.2",
     "rimraf": "^2.6.2",
-    "sass-loader": "^7.0.3",
-    "scss-loader": "0.0.1",
+    "sass-loader": "^7.0.1",
     "semver": "^5.5.0",
     "shelljs": "^0.8.2",
-    "strip-ansi": "^4.0.0",
-    "style-loader": "^0.21.0",
-    "stylus-loader": "^3.0.2",
+    "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^1.0.1",
-    "webpack": "^4.12.0",
-    "webpack-cli": "^3.0.4",
-    "webpack-dev-middleware": "^3.1.3",
-    "webpack-dev-server": "^2.11.2",
+    "vue-loader": "^15.2.4",
+    "vue-style-loader": "^4.1.0",
+    "vue-template-compiler": "^2.5.16",
+    "webpack": "^4.10.2",
+    "webpack-cli": "3.0.1",
+    "webpack-dev-server": "^3.1.4",
     "webpack-merge": "^4.1.2"
   },
-  "dependencies": {
-    "decode": "^0.3.0",
-    "encode": "^1.0.1",
-    "jquery": "^1.8.3",
-    "loglevel": "^1.6.1",
-    "overlay": "^1.2.5",
-    "strip-ansi": "^4.0.0",
-    "underscore": "^1.9.1"
-  }
+  "engines": {
+    "node": ">= 6.0.0",
+    "npm": ">= 3.0.0"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
